--- a/01-gallery.html
+++ b/01-gallery.html
@@ -8,9 +8,7 @@
   <title>Image gallery</title>
   <link rel="stylesheet" href="css/common.css" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/combine/npm/modern-normalize@1.1.0,npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
-</head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css" />
 
 <body>
   <p><a href="index.html">Go back</a></p>
